--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 					<div class="row gx-5">
 						<h1 class="text-center">Texno catalog</h1>
 						<div class="col-4">
-							<form>
+							<form action="https://echo.htmlacademy.ru/" method="post">
 								<div class="mb-3">
 									<input
-										type="email"
+										type="text"
 										class="form-control"
 										value="ave"
+										name="user__name"
 										id="exampleInputEmail1"
 										aria-describedby="emailHelp"
 									/>
@@ -35,6 +36,7 @@
 										type="number"
 										class="form-control"
 										value="5"
+										name="user__firsname"
 										id="exampleInputPassword1"
 									/>
 								</div>
@@ -43,6 +45,7 @@
 									class="form-control mb-3"
 									list="datalistOptions"
 									id="exampleDataList"
+									name="user__city"
 									placeholder="all"
 								/>
 								<datalist id="datalistOptions">
@@ -55,6 +58,7 @@
 								<select
 									class="form-select mb-3"
 									aria-label="Default select example"
+									name="user__rating"
 								>
 									<option selected>Rating (high to low)</option>
 									<option value="1">One</option>
@@ -110,7 +114,7 @@
 											<div class="carousel-inner">
 												<div class="carousel-item active">
 													<img
-														src="./images/detail.jpg"
+														src="./images/detail.png"
 														class="d-block w-100  rounded-top"
 														alt="Hp noutbooks"
 														width="286"
@@ -119,7 +123,7 @@
 												</div>
 												<div class="carousel-item">
 													<img
-														src="./images/detail-1.jpg"
+														src="./images/detail-1.png"
 														class="d-block w-100  rounded-top"
 														alt="Hp noutbooks"
 														width="286"
@@ -128,7 +132,7 @@
 												</div>
 												<div class="carousel-item">
 													<img
-														src="./images/detail-2.jpg"
+														src="./images/detail-2.png"
 														class="d-block w-100 rounded-top"
 														alt="Hp noutbooks"
 														width="286"
@@ -202,10 +206,10 @@
                                                 <img src="./images/galaxy.png" class="d-block w-100" alt="Galaxy" width="286" height="286">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="./images/galaxy2.jpg" class="d-block w-100" alt="Galaxy" width="286" height="286">
+                                                <img src="./images/galaxy2.png" class="d-block w-100" alt="Galaxy" width="286" height="286">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="./images/galaxy22.jpg" class="d-block w-100" alt="Galaxy" width="286" height="286">
+                                                <img src="./images/galaxy22.png" class="d-block w-100" alt="Galaxy" width="286" height="286">
                                               </div>
                                             </div>
                                             <button class="carousel-control-prev" type="button" data-bs-target="#control" data-bs-slide="prev">
@@ -218,7 +222,7 @@
                                             </button>
                                           </div>
 										<div class="card-body">
-											<h5 class="card-title">HP Pavilion Gaming 15</h5>
+											<h5 class="card-title">SAMSUNG S22 Ultra</h5>
 											<p class="card-text">
 												<span
 													><img
@@ -227,7 +231,7 @@
 														width="20"
 														height="20"
 												/></span>
-												2019
+												2020
 											</p>
 											<p class="card-text">
 												<span
@@ -237,7 +241,7 @@
 														width="20"
 														height="20"
 												/></span>
-												8.9
+												9.8
 											</p>
 										</div>
 										<div class="card-body d-flex justify-content-between">
